src/components/SocialsPanel.scss
.socials-panel {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background: #000;
    color: #fff;

    ul {
        display: flex;
        gap: 1rem;

        li {
            span {
                margin-right: 0.75rem;
                font-size: 1rem;
            }

            a {
                font-size: 1.5rem;
            }
        }
    }
}

@media (min-width: 320px) {
    .socials-panel {
        flex-direction: column;
        text-align: left;
        align-items: flex-start;
        padding: 0.5rem 1rem;

        .social-left-side {
            ul {
                display: block;
                text-align: left;
            }
        }
    }
}

@media (min-width: 475px) {
    .socials-panel {
        flex-direction: row;
        padding: 0.5rem 3rem;

        .social-left-side {
            ul {
                display: block;
                text-align: left;
            }
        }
    }
}

@media (min-width: 640px) {
    .socials-panel {
        padding: 0.5rem 3rem;

        .social-left-side {
            ul {
                display: flex;
            }
        }
    }
}

@media (min-width: 768px) {
    .socials-panel {
        .social-left-side {
            ul {
                display: flex;
            }
        }
    }
}

@media (min-width: 1024px) {
    .socials-panel {
        .social-left-side {
            ul {
                display: flex;
            }
        }
    }
}

@media (min-width: 1280px) {
    .socials-panel {
        .social-left-side {
            ul {
                display: flex;
            }
        }
    }
}

@media (min-width: 1536px) {
    .socials-panel {
        .social-left-side {
            ul {
                display: flex;
            }
        }
    }
}

